# advent-of-code-c

./: .gitignore  CMakeLists.txt  README.md  shell.nix
src/2024/: day_01_1.c  day_01_2.c  day_02_1.c  day_02_2.c
src/2025/: day_01_1.c  day_01_2.c  day_02_1.c  day_02_2.c  day_03_1.c  day_03_2.c  day_04_1.c  day_04_2.c  day_05_1.c  day_05_2.c  day_06_1.c  day_06_2.c  day_07_1.c  day_07_2.c  day_08_1.c  day_08_2.c
src/lib/: aoc.h  binary_heap.c  binary_heap.h  hash_map.c  hash_map.h  hash_set.c  hash_set.h  macros.h  numeric.c  numeric.h  queue.c  queue.h  str.c  str.h  tree_map.c  tree_map.h  vec.c  vec.h
